Added loads of temporary logging. Improved performance.