@@ -3,13 +3,17 @@ package org.mark.chess.piece.general.isvalidmove;
 import lombok.Data;
 import org.jetbrains.annotations.NotNull;
 import org.mark.chess.board.Chessboard;
+import org.mark.chess.board.Coordinates;
 import org.mark.chess.board.Field;
 import org.mark.chess.player.PlayerColor;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
 
+import static java.lang.Math.abs;
+import static org.mark.chess.board.Chessboard.NUMBER_OF_COLUMNS_AND_ROWS;
 import static org.mark.chess.piece.general.PieceType.PAWN;
 
 @Data
@@ -28,6 +32,35 @@ public class PieceTypeSharedRules {
     private int                  absoluteHorizontalMove;
     private int                  absoluteVerticalMove;
 
+    public static @NotNull Stream<Coordinates> diagonalMoves(Field from, int number) {
+        return Stream.of(new Coordinates(number, from.getCoordinates().getY() + from.getCoordinates().getX() - number),
+                new Coordinates(number, from.getCoordinates().getY() - from.getCoordinates().getX() + number));
+    }
+
+    public static @NotNull Stream<Coordinates> horizontalAndVerticalMoves(Field from, int number) {
+        return Stream.of(new Coordinates(number, from.getCoordinates().getY()), new Coordinates(from.getCoordinates().getX(), number));
+    }
+
+    public static @NotNull Predicate<Coordinates> maxStepsHorizontally(Field from, int maxStep) {
+        return coordinates -> abs(coordinates.getX() - from.getCoordinates().getX()) <= maxStep;
+    }
+
+    public static @NotNull Predicate<Coordinates> maxStepsVertically(Field from, int maxStep) {
+        return coordinates -> abs(coordinates.getY() - from.getCoordinates().getY()) <= maxStep;
+    }
+
+    public static @NotNull Predicate<Coordinates> minStepsVertically(Field from) {
+        return coordinates -> abs(coordinates.getY() - from.getCoordinates().getY()) >= 1;
+    }
+
+    public static @NotNull Predicate<Coordinates> skipFrom(Field from) {
+        return coordinates -> !(coordinates.getX() == from.getCoordinates().getX() && coordinates.getY() == from.getCoordinates().getY());
+    }
+
+    public static @NotNull Predicate<Coordinates> withinChessboardBoundaries() {
+        return coordinates -> coordinates.getY() >= 1 && coordinates.getY() <= NUMBER_OF_COLUMNS_AND_ROWS;
+    }
+
     protected static boolean isCaptureMove(Field from, @NotNull Field to) {
         return to.getPieceType() != null && to.getPieceType().getColor() != from.getPieceType().getColor();
     }
@@ -36,14 +69,12 @@ public class PieceTypeSharedRules {
         return chessboard
                 .getFields()
                 .stream()
-                .filter(opponentField -> (opponentField.getCoordinates().getX() + ONE_STEP_WEST ==
-                        playerField.getCoordinates().getX() ||
+                .filter(opponentField -> (opponentField.getCoordinates().getX() + ONE_STEP_WEST == playerField.getCoordinates().getX() ||
                         opponentField.getCoordinates().getX() + ONE_STEP_EAST == playerField.getCoordinates().getX()) &&
                         opponentField.getCoordinates().getY() == playerField.getCoordinates().getY())
-                .filter(opponentField -> opponentField.getPieceType() !=
-                        null && opponentField.getPieceType().getColor() != color)
+                .filter(opponentField -> opponentField.getPieceType() != null && opponentField.getPieceType().getColor() != color)
                 .filter(opponentField -> opponentField.getPieceType().getName().equals(PAWN))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected int getAbsoluteHorizontalMove(Field from, Field to) {
